...
    viewModel: HomeViewModel = hiltViewModel()
) {
    val state = viewModel.state

    Scaffold(modifier = Modifier.fillMaxSize(), topBar = {
        CenterAlignedTopAppBar(title = {
            Text(text = "Home")
        }, navigationIcon = {
            IconButton(onClick = onSettings) {
                Icon(imageVector = Icons.Default.Settings, contentDescription = "Settings")
            }
        })
    },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onNewHabit, containerColor = MaterialTheme.colorScheme.primary,
                shape = CircleShape,
                modifier = Modifier.semantics {
                    contentDescription = "Add a new habit"
                }
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Create habit",
                    tint = MaterialTheme.colorScheme.tertiary
...
